--- a/toscop.tex
+++ b/toscop.tex
@@ -283,7 +283,7 @@ nota: mem\_stats é um struct que guarda informações do \textit{/proc/meminfo}
 \end{figure}
 As informações do sistema operacional estão organizadas em linhas, 
 contendo data e hora, número de processos e threads, estados dos processos, 
-porcetagem de uso de CPU e de memória, memória RAM e memória virtual,
+porcentagem de uso de CPU e de memória, memória RAM e memória virtual,
 memória swap e memória compartilhada, tamanho de página e memória em buffer/cache.
 
 \subsection{Tela tp\_proc}
