agora a tela de filesystem é navegavel, parametrizado variaveis de total, removido codigo desnecessario, arrumado para nao permitir navegar em telas nao navegaveis

--- a/toscop.tex
+++ b/toscop.tex
@@ -231,6 +231,7 @@ typedef struct t_win {
     int x;
     int y;
     uint64_t starts_at;
+    uint64_t bound;
 } t_win;
 // estrutura para genrenciamento das telas do ncurses
 typedef struct toscop_wm {
