--- a/toscop.tex
+++ b/toscop.tex
@@ -29,7 +29,7 @@ utiliza o sistema make para o gerenciamento de compilação:
 .3 toscop\_thread.h.
 .3 toscop\_win.h.
 .3 w\_proc.h.
-.2 LICENSE\DTcomment{MIT LINCESE}.
+.2 LICENSE\DTcomment{MIT LICENSE}.
 .2 Makefile\DTcomment{GNU Makefile}.
 .2 README.md.\DTcomment{README PLS}.
 .2 src/\DTcomment{C source directory}.
